--- a/LunaDraw.csproj
+++ b/LunaDraw.csproj
@@ -73,6 +73,7 @@
 		<PackageReference Include="SkiaSharp" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="31.2.3" />
 	</ItemGroup>
 
 </Project>
