--- a/LunaDraw.csproj
+++ b/LunaDraw.csproj
@@ -18,13 +18,15 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>		
+		<Nullable>enable</Nullable>	
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>	
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>	
 
 		<!-- Display name -->
 		<ApplicationTitle>LunaDraw</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.lunadraw</ApplicationId>
+		<ApplicationId>com.codesoupcafe.lunadraw</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
