--- a/tests/LunaDraw.Tests/LunaDraw.Tests.csproj
+++ b/tests/LunaDraw.Tests/LunaDraw.Tests.csproj
@@ -5,6 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <EnableMoq>true</EnableMoq>
+    <EnableMauiResizetizer>false</EnableMauiResizetizer>
+    <EnableDefaultMauiItems>false</EnableDefaultMauiItems>
+    <IsMauiApp>false</IsMauiApp>
+    <ShouldResizeImages>false</ShouldResizeImages>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +17,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+    <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,5 +27,4 @@
   <ItemGroup>
     <ProjectReference Include="..\..\LunaDraw.csproj" />
   </ItemGroup>
-
 </Project>
