init refactor for underlying infrastructure of carousel from SBC to Maui. Views WIP. no build

--- a/LunaDraw.csproj
+++ b/LunaDraw.csproj
@@ -63,6 +63,7 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+    <MauiImage Update="Resources\Images\icon_more_vert.svg" Resize="True" BaseSize="24,24" TintColor="#000000" />
 		
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -73,6 +74,7 @@
 
 	<ItemGroup>
     <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.11" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.11" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
@@ -87,5 +89,11 @@
 
 	<ItemGroup>
 	  <Folder Include="Logic\Extensions\" />
+	</ItemGroup>		
+
+	<ItemGroup>
+	  <Compile Update="Components\Carousel\RenderListView.xaml.cs">
+	    <DependentUpon>RenderListView.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>		
 </Project>
