reference clean-up

--- a/LunaDraw.csproj
+++ b/LunaDraw.csproj
@@ -73,6 +73,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Include="Documentation\uuid.md" />
+	</ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.11" />
