--- a/tests/LunaDraw.Tests/LunaDraw.Tests.csproj
+++ b/tests/LunaDraw.Tests/LunaDraw.Tests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
 
     <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="FluentAssertions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
