--- a/nuget.config
+++ b/nuget.config
@@ -2,7 +2,18 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <!-- Primary source: NuGet.org (used in all environments) -->
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <!-- Local development source (optional, ignored if path doesn't exist) -->
     <add key="LocalNuGetPackages" value="../LocalNuGetPackages" />
   </packageSources>
+  <packageSourceMapping>
+    <!-- Map CodeSoupCafe packages to allow both sources -->
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+    <packageSource key="LocalNuGetPackages">
+      <package pattern="CodeSoupCafe.*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
