--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,32 +15,32 @@ jobs:
     runs-on: windows-latest # Or macos-latest for iOS/Mac Catalyst builds
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '10.0.x'
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "10.0.x"
 
-    - name: Install MAUI Workloads
-      run: dotnet workload install maui
+      - name: Install MAUI Workloads
+        run: dotnet workload install maui
 
-    - name: Cache NuGet packages
-      uses: actions/cache@v4
-      with:
-        path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json', '**/*.csproj') }}
-        restore-keys: |
-          ${{ runner.os }}-nuget-
+      - name: Cache NuGet packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json', '**/*.csproj') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
 
-    - name: Remove Local Source for CI
-      run: dotnet nuget remove source LocalNuGetPackages --configfile nuget.config
+      # - name: Remove Local Source for CI
+      #   run: dotnet nuget remove source LocalNuGetPackages --configfile nuget.config
 
-    - name: Restore NuGet packages
-      run: dotnet restore LunaDraw.csproj --configfile nuget.config
+      - name: Restore NuGet packages
+        run: dotnet restore LunaDraw.csproj --configfile nuget.config
 
-    - name: Build MAUI App (Windows)
-      run: dotnet build LunaDraw.csproj -c Release -f net10.0-windows10.0.19041.0 
+      - name: Build MAUI App (Windows)
+        run: dotnet build LunaDraw.csproj -c Release -f net10.0-windows10.0.19041.0
 
-    - name: Run Unit Tests
-      run: dotnet test tests/LunaDraw.Tests/LunaDraw.Tests.csproj
+      - name: Run Unit Tests
+        run: dotnet test tests/LunaDraw.Tests/LunaDraw.Tests.csproj
