--- a/nuget.config
+++ b/nuget.config
@@ -5,15 +5,15 @@
     <!-- Primary source: NuGet.org (used in all environments) -->
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <!-- Local development source (optional, ignored if path doesn't exist) -->
-    <!-- <add key="LocalNuGetPackages" value="../LocalNuGetPackages" /> -->
+    <add key="LocalNuGetPackages" value="../LocalNuGetPackages" />
   </packageSources>
   <packageSourceMapping>
     <!-- Map CodeSoupCafe packages to allow both sources -->
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
-    <!-- <packageSource key="LocalNuGetPackages">
+    <packageSource key="LocalNuGetPackages">
       <package pattern="CodeSoupCafe.*" />
-    </packageSource> -->
+    </packageSource>
   </packageSourceMapping>
 </configuration>
