Squashed commit of the following:
commit 5b532fcf1729e6f20a74b45abd750669a7b7e514
Merge: 31f958a ed0e36c
Author: Jeff H <iknowcodesoup@gmail.com>
Date:   Sun Dec 21 16:21:49 2025 -0500

    Merge branch 'develop-merge-resolve' into develop

commit ed0e36c71ea43c71c1bd08e3905e94685ab2ff56
Author: Jeff H <iknowcodesoup@gmail.com>
Date:   Sun Dec 21 15:33:13 2025 -0500

    attempts to move more logic to CSC.Maui assembly

commit 9faad49e135df75c7acf7a56234b4ab73ba16a0d
Author: Jeff H <iknowcodesoup@gmail.com>
Date:   Sat Dec 20 20:57:42 2025 -0500

    Merge remote-tracking branch 'origin/develop'

commit 31f958ae908b00f6a915fc9641b390b741af0468
Author: Jeff Holcombe <iknowcodesoup@gmail.com>
Date:   Sat Dec 20 20:49:46 2025 -0500

    Carousel v3 (#39)

    * init refactor for underlying infrastructure of carousel from SBC to Maui. Views WIP. no build

    * reference clean-up

    * attempts at continued integration and clean-up

    * loading but no data

    * working gallery. performance?

    * refactor out to assembly

    * clean-up attempt

    * working gallery

    * style clean-up

    * warning clean-up

    * Some attempt at a test project. documentation. nuget reference

    * test fix

    * nuget setup

    * limit fix

    * remove local nuget

commit 3db488c7093f0fa9056a20efae55a741a660d3fd
Author: Jeff Holcombe <iknowcodesoup@gmail.com>
Date:   Mon Dec 15 13:28:20 2025 -0500

    Update README.md

commit fcd1983d40076ebea1d2792ca698ab4b80fb2a99
Author: Jeff H <iknowcodesoup@gmail.com>
Date:   Mon Dec 15 13:20:55 2025 -0500

    toolbar merge fix

commit cb3c7e342bb87ebc0875f20ccea33edc2324baa3
Merge: 43504af f3b35b3
Author: Jeff Holcombe <iknowcodesoup@gmail.com>
Date:   Mon Dec 15 11:10:33 2025 -0500

    Merge branch 'main' into develop

commit 43504af0d57f308b18d0cd5b4ed2bf2a4240d9ca
Author: Jeff Holcombe <iknowcodesoup@gmail.com>
Date:   Mon Dec 15 11:08:59 2025 -0500

    documentation update. angle jitter bug fix. +brushes (#35)

commit 63d46

--- a/LunaDraw.csproj
+++ b/LunaDraw.csproj
@@ -46,11 +46,13 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net10.0-windows10.0.19041.0'">
-      <EnableDefaultCopyToOutputDirectoryItems>false</EnableDefaultCopyToOutputDirectoryItems>
+    <EnableDefaultCopyToOutputDirectoryItems>false</EnableDefaultCopyToOutputDirectoryItems>
+    <DefaultItemExcludes>$(DefaultItemExcludes);Legacy\**</DefaultItemExcludes>
   </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Remove="Legacy\**\*" />
+	<ItemGroup> 
+    <Compile Remove="Legacy\**\*.cs" />
+    <None Include="Legacy\**\*" /> 
 	</ItemGroup>
 
 	<ItemGroup>
@@ -63,6 +65,7 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+    <MauiImage Update="Resources\Images\icon_more_vert.svg" Resize="True" BaseSize="24,24" TintColor="#000000" />
 		
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -72,7 +75,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+    <PackageReference Include="CodeSoupCafe.Maui" Version="1.0.4" />
     <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.11" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.11" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
@@ -83,9 +88,5 @@
 		<PackageReference Include="SkiaSharp" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
-	</ItemGroup>		
-
-	<ItemGroup>
-	  <Folder Include="Logic\Extensions\" />
-	</ItemGroup>		
+	</ItemGroup>
 </Project>
