--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -33,8 +33,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuget-
 
-      - name: Remove Local Source for CI
-        run: dotnet nuget remove source LocalNuGetPackages --configfile nuget.config
+      # - name: Remove Local Source for CI
+      #   run: dotnet nuget remove source LocalNuGetPackages --configfile nuget.config
 
       - name: Restore NuGet packages
         run: dotnet restore LunaDraw.csproj --configfile nuget.config
