--- a/LunaDraw.csproj
+++ b/LunaDraw.csproj
@@ -84,11 +84,16 @@
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.11" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
     <PackageReference Include="nor0x.Maui.ColorPicker" Version="2.0.4" />
+    <PackageReference Include="Plugin.Maui.ScreenRecording" Version="1.0.0-preview4" />
 		<PackageReference Include="ReactiveUI" Version="22.1.1" />
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
 		<PackageReference Include="ReactiveUI.Maui" Version="22.1.1" />
 		<PackageReference Include="SkiaSharp" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Logic\Services\" />
 	</ItemGroup>
 </Project>
